2005-01-13  Joe Shaw  <joeshaw@novell.com>

	* autogen.sh: Allow automake 1.9

2005-01-11  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.10

2004-12-10  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/internet-address.c (internet_address_to_string): rfc2047
	encode the group name too.

2004-12-08  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-content-type.c (g_mime_content_type_is_type): Fixed
	to do as advertised - allow wildcard matching for type.

2004-12-06  Joe Shaw  <joeshaw@novell.com>

	* mono/Makefile.am: Add InternetAddress.custom

	* mono/InternetAddress.custom: Added.  Implements a new class
	which will handle the destroying of InternetAddressLists.
	Implement ParseString, which basically implements a managed
	version of internet_address_parse_string.

	* mono/Message.custom: Use the InternetAddressList for
	GetRecipients ().

2004-12-01  Joe Shaw  <joeshaw@novell.com>

	* configure.in: Error out if the user explicitly enables the mono
	bindings and we can't find mcs.

	* gmime.spec.in: Add support for the mono bindings, placing them
	in a separate gmime-sharp package.  Patch from Ryan Skadberg
	<skadz@stigmata.org>

2004-11-29  Joe Shaw  <joeshaw@novell.com>

	* mono/AssemblyInfo.cs.in: Add @srcdir@ to AssemblyKeyFile so we
	build when builddir != srcdir.

	* mono/Makefile.am: Add gmime-sharp.pub to EXTRA_DIST.

2004-11-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c: #define _POSIX_SOURCE so it compiles
	on IRIX.

	* gmime/gmime-multipart-signed.c (multipart_signed_remove_header):
	Same.

	* gmime/gmime-multipart-encrypted.c
	(multipart_encrypted_remove_header): Don't return.

2004-11-19  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metadata: Don't autogenerate get GetDate method

	* mono/Message.custom: Implement it by hand and return a DateTime.

2004-11-17  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metadata: More metadata goodness.
